--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "firebase": "^10.11.1",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "react-simple-typewriter": "^5.0.1",
+    "react-spinners": "^0.14.1",
     "react-sweetalert2": "^0.6.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.4",
